# NetShield_DPI

./: .gitignore  CMakeLists.txt  README.md  refactor.py  test_opt.cpp  test_thread.cpp
.github/workflows/: release.yml
include/: compat_optional.h  rule_manager.h  sni_extractor.h  thread_safe_queue.h  types.h
src/: dpi_mt.cpp  rule_manager.cpp  sni_extractor.cpp
